{
    "name": "GameControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "a8f19654-d632-4c89-97e4-3d37dd4fef81",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "cbc24e14-62d4-485b-838b-f7f6de453bde",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryAttack",
                    "type": "Button",
                    "id": "a030f956-47cc-4fc0-aa48-84fca44dea1f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "SpecialAttack",
                    "type": "Button",
                    "id": "644fd20d-fd5f-4270-b26e-c7ad8d634d92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f7399bda-4e7e-4899-b053-951f621b3f59",
                    "path": "<Keyboard>/#(P)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ce2ee65-f617-4e12-8c50-63d0c257c0b6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a139411-80f6-4751-8243-ffb80a99490d",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e38834d8-f8f9-4c79-baec-383dcac2cc8a",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MainMenu",
            "id": "1d86a99e-f8fd-41d1-9c5f-4ea1f09a4a75",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "e0616576-8bd3-480c-a37c-647d15153a8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "05635858-1331-46ad-aab8-7d61a2f1ad7a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "86148ef4-567a-4626-bdba-ffe6653aef87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "d6fe8c7a-bd08-4a9c-b8fb-540b5d9402e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "b9bbd629-17c6-4232-b923-e041d18f7d67",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "10116324-5f59-4aeb-a733-5fb56e3edb1d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6408529f-8b50-4159-b827-f9e9ce67acfc",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64d6cea4-4608-40a9-a88f-0231a5144e49",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "595fdad3-f2e9-4373-9ca1-b885efbfd3b1",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "354ec70f-96b7-4425-902c-17ddb538b28a",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}